tests/core_tests/core_tests.exp.lti
Error ------------------------------------------------------------------------------------------------------ json.js:4:5

Cannot use `new` on object type [1]. Only classes can be constructed. [invalid-constructor]

   json.js:4:5
      4| new JSON(); // ERROR
             ^^^^

References:
   <BUILTINS>/core.js:1633:19
                           v-
   1633| declare var JSON: {|
   1634|     /**
   1635|      * Converts a JavaScript Object Notation (JSON) string into an object.
   1636|      * @param text A valid JSON string.
   1637|      * @param reviver A function that transforms the results. This function is called for each member of the object.
   1638|      * If a member contains nested objects, the nested objects are transformed before the parent object is.
   1639|      */
   1640|     +parse: (text: string, reviver?: (key: any, value: any) => any) => any,
   1641|     /**
   1642|      * Converts a JavaScript value to a JavaScript Object Notation (JSON) string.
   1643|      * @param value A JavaScript value, usually an object or array, to be converted.
   1644|      * @param replacer A function that transforms the results or an array of strings and numbers that acts as a approved list for selecting the object properties that will be stringified.
   1645|      * @param space Adds indentation, white space, and line break characters to the return-value JSON text to make it easier to read.
   1646|      */
   1647|     +stringify: ((
   1648|         value: null | string | number | boolean | interface {} | $ReadOnlyArray<mixed>,
   1649|         replacer?: ?((key: string, value: any) => any) | Array<any>,
   1650|         space?: string | number
   1651|       ) => string) &
   1652|       (
   1653|         value: mixed,
   1654|         replacer?: ?((key: string, value: any) => any) | Array<any>,
   1655|         space?: string | number
   1656|       ) => string | void,
   1657| |};
         -^ [1]


Error ----------------------------------------------------------------------------------------------------- json.js:11:6

Cannot assign `1` to `JSON.parse` because property `parse` is not writable. [cannot-write]

   11| JSON.parse = 1; // ERROR
            ^^^^^


Error -------------------------------------------------------------------------------------------- json_stringify.js:9:2

Cannot cast `JSON.stringify(...)` to string because undefined [1] is incompatible with string [2]. [incompatible-cast]

   json_stringify.js:9:2
      9| (JSON.stringify(bad1): string);
          ^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1656:21
   1656|       ) => string | void,
                             ^^^^ [1]
   json_stringify.js:9:24
      9| (JSON.stringify(bad1): string);
                                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- map.js:23:21

Cannot call `Map` with array literal bound to `iterable` because string [1] is incompatible with tuple type [2] in type
argument `Yield` [3] of the return value of property `@@iterator`. [incompatible-call]

   map.js:23:21
     23|     let x = new Map(['foo', 123]); // error
                             ^^^^^^^^^^^^

References:
   map.js:23:22
     23|     let x = new Map(['foo', 123]); // error
                              ^^^^^ [1]
   <BUILTINS>/core.js:1739:38
   1739|     constructor(iterable?: ?Iterable<[K, V]>): void;
                                              ^^^^^^ [2]
   <BUILTINS>/core.js:1673:22
   1673| interface $Iterator<+Yield,+Return,-Next> {
                              ^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- map.js:23:21

Cannot call `Map` with array literal bound to `iterable` because number [1] is incompatible with tuple type [2] in type
argument `Yield` [3] of the return value of property `@@iterator`. [incompatible-call]

   map.js:23:21
     23|     let x = new Map(['foo', 123]); // error
                             ^^^^^^^^^^^^

References:
   map.js:23:29
     23|     let x = new Map(['foo', 123]); // error
                                     ^^^ [1]
   <BUILTINS>/core.js:1739:38
   1739|     constructor(iterable?: ?Iterable<[K, V]>): void;
                                              ^^^^^^ [2]
   <BUILTINS>/core.js:1673:22
   1673| interface $Iterator<+Yield,+Return,-Next> {
                              ^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- map.js:24:42

Cannot call `Map` with array literal bound to `iterable` because string [1] is incompatible with number [2] in index 0
of type argument `Yield` [3] of the return value of property `@@iterator`. [incompatible-call]

   map.js:24:42
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                  ^^^^^^^^^^^^^^

References:
   map.js:24:44
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                    ^^^^^ [1]
   map.js:24:16
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                        ^^^^^^ [2]
   <BUILTINS>/core.js:1673:22
   1673| interface $Iterator<+Yield,+Return,-Next> {
                              ^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- map.js:24:42

Cannot call `Map` with array literal bound to `iterable` because number [1] is incompatible with string [2] in index 1
of type argument `Yield` [3] of the return value of property `@@iterator`. [incompatible-call]

   map.js:24:42
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                  ^^^^^^^^^^^^^^

References:
   map.js:24:51
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                           ^^^ [1]
   map.js:24:24
     24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                ^^^^^^ [2]
   <BUILTINS>/core.js:1673:22
   1673| interface $Iterator<+Yield,+Return,-Next> {
                              ^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ map.js:29:6

Cannot cast `x.get(...)` to boolean because undefined [1] is incompatible with boolean [2]. [incompatible-cast]

   map.js:29:6
     29|     (x.get('foo'): boolean); // error, string | void
              ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1747:22
   1747|     get(key: K): V | void;
                              ^^^^ [1]
   map.js:29:20
     29|     (x.get('foo'): boolean); // error, string | void
                            ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ map.js:29:6

Cannot cast `x.get(...)` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   map.js:29:6
   29|     (x.get('foo'): boolean); // error, string | void
            ^^^^^^^^^^^^

References:
   map.js:28:27
   28|   function(x: Map<string, number>) {
                                 ^^^^^^ [1]
   map.js:29:20
   29|     (x.get('foo'): boolean); // error, string | void
                          ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- map.js:30:11

Cannot call `x.get` with `123` bound to `key` because number [1] is incompatible with string [2]. [incompatible-call]

   map.js:30:11
   30|     x.get(123); // error, wrong key type
                 ^^^ [1]

References:
   map.js:28:19
   28|   function(x: Map<string, number>) {
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- regexp.js:26:19

Cannot call `RegExp` with `'z'` bound to `flags` because string literal `z` [1] is incompatible with `RegExp$flags` [2]
since `z` is not a member of the set. [invalid-charset-type-arg]

   regexp.js:26:19
     26|     RegExp('foo', 'z'); // error
                           ^^^ [1]

References:
   <BUILTINS>/core.js:1091:21
   1091| type RegExp$flags = $CharSet<"gimsuy">;
                             ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- regexp.js:27:23

Cannot call `RegExp` with `'z'` bound to `flags` because string literal `z` [1] is incompatible with `RegExp$flags` [2]
since `z` is not a member of the set. [invalid-charset-type-arg]

   regexp.js:27:23
     27|     new RegExp('foo', 'z'); // error
                               ^^^ [1]

References:
   <BUILTINS>/core.js:1091:21
   1091| type RegExp$flags = $CharSet<"gimsuy">;
                             ^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- weakset.js:19:24

Cannot call `WeakSet` because in type argument `T`: [incompatible-call]
 - Either number [1] is incompatible with interface type [2].
 - Or number [1] is incompatible with read-only array type [3].

   weakset.js:19:24
     19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                ^ [1]

References:
   <BUILTINS>/core.js:1825:26
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                  ^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1825:41
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                                 ^^^^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- weakset.js:19:27

Cannot call `WeakSet` because in type argument `T`: [incompatible-call]
 - Either number [1] is incompatible with interface type [2].
 - Or number [1] is incompatible with read-only array type [3].

   weakset.js:19:27
     19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                   ^ [1]

References:
   <BUILTINS>/core.js:1825:26
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                  ^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1825:41
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                                 ^^^^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- weakset.js:19:30

Cannot call `WeakSet` because in type argument `T`: [incompatible-call]
 - Either number [1] is incompatible with interface type [2].
 - Or number [1] is incompatible with read-only array type [3].

   weakset.js:19:30
     19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                      ^ [1]

References:
   <BUILTINS>/core.js:1825:26
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                  ^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1825:41
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                                 ^^^^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- weakset.js:36:15

Cannot call `WeakSet` because in type argument `T`: [incompatible-call]
 - Either number [1] is incompatible with interface type [2].
 - Or number [1] is incompatible with read-only array type [3].

   weakset.js:36:15
     36| let ws5 = new WeakSet(numbers()); // error, must be objects
                       ^^^^^^^

References:
   weakset.js:29:31
     29| function* numbers(): Iterable<number> {
                                       ^^^^^^ [1]
   <BUILTINS>/core.js:1825:26
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                  ^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1825:41
   1825| declare class WeakSet<T: interface {} | $ReadOnlyArray<mixed>> extends $ReadOnlyWeakSet<T> {
                                                 ^^^^^^^^^^^^^^^^^^^^^ [3]



Found 16 errors
